[package]
name = "psbt-commander"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jared Dahlke"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
bdk_wallet = { version = "1.0.0-alpha.13", default-feature = false, features = ["all-keys"] }
bdk_electrum = "0.15.0"
bdk_file_store = "0.13.0"
anyhow = "1.0.86"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
